WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
254063
REGRESSION (
258767@main
): image on studioneat.com is strangely masked
https://bugs.webkit.org/show_bug.cgi?id=254063
Summary
REGRESSION (258767@main): image on studioneat.com is strangely masked
Darin Adler
Reported
2023-03-17 00:14:37 PDT
There’s an image on studioneat.com that has a peculiar mask, looking like a set of four circles, then further masked to a circle. Turns out this is due to how the -webkit-mask-box-image shorthand sets -webkit-mask-box-image-slices.
Attachments
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2023-03-17 00:14:55 PDT
rdar://106464942
Darin Adler
Comment 2
2023-03-17 00:24:18 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/11642
Darin Adler
Comment 3
2023-03-17 14:10:03 PDT
***
Bug 248346
has been marked as a duplicate of this bug. ***
Darin Adler
Comment 4
2023-03-17 14:13:19 PDT
The original webpage could be improved by removing -webkit-mask-box-image entirely, since border-radius now does the clipping without a separate mask.
EWS
Comment 5
2023-03-17 14:22:26 PDT
Committed
261808@main
(2e5421f37cc9): <
https://commits.webkit.org/261808@main
> Reviewed commits have been landed. Closing PR #11642 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug