Source/WebCore/css/ComputedStyleExtractor.cpp
@@ -238,7 +238,7 @@ static Ref<CSSPrimitiveValue> valueForImageSliceSide(const Length& length)
     // a calculation that combines a percentage and a number.
     if (length.isPercent())
         return CSSPrimitiveValue::create(length.percent(), CSSUnitType::CSS_PERCENTAGE);
-    if (length.isAuto() || length.isFixed())
+    if (length.isFixed())
         return CSSPrimitiveValue::create(length.value());
 
     // Calculating the actual length currently in use would require most of the code from RenderBoxModelObject::paintNinePieceImage.
